--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    min-height: 100vh;
 }
 
 .feature-label {
     margin: 30px 0 30px 0;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
 
 /* HEADER */
@@ -123,6 +131,7 @@ body {
     display: block;
 }
 
+
 /* LEFT MENUBAR */
 .left-menubar {
     background: #333;
@@ -158,4 +167,123 @@ body {
     color: rgb(97, 179, 206);
     transition: 100ms ease-in;
     cursor: pointer;
+}
+
+
+/* IMAGE SLIDER */
+.image-container {
+    height: 500px;
+    width: 500px;
+    border: 2px solid black;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0 20px 0;
+}
+
+.image-slider {
+    display: block;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    margin: 10px;
+}
+
+.slider-slides {
+    width: 100%;
+    padding-top: 80%;
+}
+
+.slide {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: bold;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 1s;
+}
+
+.slide.active-slide {
+    opacity: 1;
+}
+
+.slide img {
+    width: 100%;
+}
+
+.slider-nav-button {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    background-color: #333;
+    opacity: .8;
+    cursor: pointer;
+}
+
+#nav-button--prev {
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+
+#nav-button--next {
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+}
+
+#nav-button--prev::after,
+#nav-button--next::after {
+    content: "";
+    position: absolute;
+    border: solid white;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 3px;
+    width: 40%;
+    height: 40%;
+}
+
+#nav-button--next::after{
+    top: 50%;
+    right: 50%;
+    transform: translate(25%, -50%) rotate(-45deg);
+}
+
+#nav-button--prev::after {
+    top: 50%;
+    right: 50%;
+    transform: translate(75%, -50%) rotate(135deg);
+}
+
+.slider-nav {
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+
+.slider-navlink {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    border: 1px #fff solid;
+    background-color: #333;
+    opacity: .8;
+    margin: 0 10px 0 10px;
+    cursor: pointer;
+}
+
+.slider-navlink.active-navlink {
+    background-color: #fff;
+    border: 1px #333 solid;
 }
