--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body {
     width: 500px;
     border: 2px solid black;
     border-radius: 5px;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     margin: 20px 0 20px 0;
